# csl-static-csf-no-word-count-example

./: Cargo.toml  Makefile
conpkg_config_files/: word_count.ron  word_count_patoms.ron
src/: main.rs  word_count.rs
src/static/: demo.txt
