[package]
name = "word_count"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/word_count.rs"
crate-type = ["cdylib"]

[dependencies]
words-count = "0.1.3"
postcard = { version = "1.0.2", features = ["alloc"] }
serde = "1.*"

csl-ffi = { path = "../../conifer-sdk/conifer-standard-library/csl-ffi", default-features = false, optional = true}

[features]
csl-ffi = ["dep:csl-ffi"]
csl_static = ["csl-ffi/static", "csl-ffi"]
word_count_main = ["csl_static"]
word_count_map = ["csl_static"]
word_count_reduce = ["csl_static"]
